--- a/app/code/SK/ProductCOA/view/frontend/templates/auth-photo.phtml
+++ b/app/code/SK/ProductCOA/view/frontend/templates/auth-photo.phtml
@@ -106,7 +106,7 @@ $priceHelper = $this->helper('Magento\Framework\Pricing\Helper\Data');
                             <div class="modal-inner-content">
                                 <span class="modal-close" data-modal="auth-modal-<?= $index ?>">&times;</span>
                                 <h2><?= $block->escapeHtml('Certificate of Authentication') ?></h2>
-                                <img src="<?= $block->escapeUrl($authPhotoUrl) ?>" alt="Authentication Photo" style="max-width: 100%;">
+                                <img src="<?= $block->escapeUrl($authPhotoUrl) ?>" alt="Authentication Photo">
                             </div>
                         </div>
                     <?php endif; ?>
