--- a/app/code/SK/ProductCOA/view/frontend/web/css/source/_module.less
+++ b/app/code/SK/ProductCOA/view/frontend/web/css/source/_module.less
@@ -1,5 +1,6 @@
-@color-light-grey: #333;
-@color-off-white: #eee;
+@color-light-blue: #007bff;
+@color-off-white: #ccc;
+@color-white: #fff;
 
 .product-info-container {
     margin: 20px auto; 
@@ -7,19 +8,19 @@
     .product-info {
         display: flex; 
         gap: 20px; 
-        border: 1px solid #ccc; 
+        border: 1px solid @color-off-white; 
         border-radius: 8px; 
         padding: 20px; 
         box-shadow: 0 2px 6px rgba(0,0,0,0.1);
         .product-details {
             h2 {
-                margin-top: 0;
+                margin-top: 2rem;
             }
             a {
                 display: inline-block; 
                 margin-top: 10px; 
-                background: #007bff; 
-                color: white; 
+                background: @color-light-blue; 
+                color: @color-white; 
                 padding: 10px 15px; 
                 border-radius: 5px; 
                 text-decoration: none;
@@ -42,7 +43,7 @@
 }
 
 .modal-inner-content {
-    background: #fff;
+    background: @color-white;
     padding: 20px;
     max-width: 500px;
     max-height: 80vh; 
