--- a/app/code/SK/ProductCOA/view/frontend/templates/order/items/renderer/default.phtml
+++ b/app/code/SK/ProductCOA/view/frontend/templates/order/items/renderer/default.phtml
@@ -17,28 +17,28 @@ $authPhoto = $_item->getAuthenticationPhoto(); // e.g., from sales_order_item DB
 $authPhotoUrl = $productInfoViewModel->getAuthenticationPhotoUrl($authPhoto);
 ?>
 <tr id="order-item-row-<?= (int) $_item->getId() ?>">
-    <td class="col name" data-th="<?= $block->escapeHtml(__('Product Name')) ?>">
-        <strong class="product name product-item-name"><?= $block->escapeHtml($_item->getName()) ?></strong>
+    <td class="col name" data-th="<?= $escaper->escapeHtml(__('Product Name')) ?>">
+        <strong class="product name product-item-name"><?= $escaper->escapeHtml($_item->getName()) ?></strong>
         <?php if ($_options = $block->getItemOptions()): ?>
             <dl class="item-options">
             <?php foreach ($_options as $_option): ?>
-                <dt><?= $block->escapeHtml($_option['label']) ?></dt>
+                <dt><?= $escaper->escapeHtml($_option['label']) ?></dt>
                 <?php if (!$block->getPrintStatus()): ?>
                     <?php $_formatedOptionValue = $block->getFormatedOptionValue($_option) ?>
                     <dd<?= (isset($_formatedOptionValue['full_view']) ? ' class="tooltip wrapper"' : '') ?>>
-                        <?= $block->escapeHtml($_formatedOptionValue['value'], ['a']) ?>
+                        <?= $escaper->escapeHtml($_formatedOptionValue['value'], ['a']) ?>
                         <?php if (isset($_formatedOptionValue['full_view'])): ?>
                             <div class="tooltip content">
                                 <dl class="item options">
-                                    <dt><?= $block->escapeHtml($_option['label']) ?></dt>
-                                    <dd><?= $block->escapeHtml($_formatedOptionValue['full_view']) ?></dd>
+                                    <dt><?= $escaper->escapeHtml($_option['label']) ?></dt>
+                                    <dd><?= $escaper->escapeHtml($_formatedOptionValue['full_view']) ?></dd>
                                 </dl>
                             </div>
                         <?php endif; ?>
                     </dd>
                 <?php else: ?>
                     <?php $optionValue = isset($_option['print_value']) ? $_option['print_value'] : $_option['value'] ?>
-                    <dd><?= $block->escapeHtml($optionValue) ?></dd>
+                    <dd><?= $escaper->escapeHtml($optionValue) ?></dd>
                 <?php endif; ?>
             <?php endforeach; ?>
             </dl>
@@ -47,51 +47,56 @@ $authPhotoUrl = $productInfoViewModel->getAuthenticationPhotoUrl($authPhoto);
         <?php if ($addtInfoBlock): ?>
             <?= $addtInfoBlock->setItem($_item)->toHtml() ?>
         <?php endif; ?>
-        <?= $block->escapeHtml($_item->getDescription()) ?>
+        <?= $escaper->escapeHtml($_item->getDescription()) ?>
 
-        <?php if($productInfoViewModel->isEnabled() && $_item->getAuthenticationPhoto() !== null): ?>
-            <a href="#" class="modal-trigger" data-modal="auth-modal-<?= $index ?>">
-                    <?= $block->escapeHtml('View Authentication Photo') ?>
+        <?php if ($productInfoViewModel->isEnabled() && $_item->getAuthenticationPhoto() !== null): ?>
+            <a href="#" class="modal-trigger" data-modal="auth-modal-<?= $escaper->escapeHtml($index) ?>">
+                    <?= $escaper->escapeHtml('View Authentication Photo') ?>
                 </a>
             <!-- Modal HTML -->
-            <div id="auth-modal-<?= $index ?>" class="auth-modal" style="display: none;">
+            <div id="auth-modal-<?= $escaper->escapeHtml($index) ?>" class="auth-modal" style="display: none;">
                 <div class="modal-inner-content">
-                    <span class="modal-close" data-modal="auth-modal-<?= $index ?>">&times;</span>
-                    <h2><?= $block->escapeHtml('Certificate of Authentication') ?></h2>
-                    <img src="<?= $block->escapeUrl($authPhotoUrl) ?>" alt="Authentication Photo" style="max-width: 100%;">
+                    <span class="modal-close" data-modal="auth-modal-<?= $escaper->escapeHtml($index) ?>">&times;</span>
+                    <h2><?= $escaper->escapeHtml('Certificate of Authentication') ?></h2>
+                    <img src="<?= $escaper->escapeUrl($authPhotoUrl) ?>" 
+                        alt="Authentication Photo" style="max-width: 100%;">
                 </div>
             </div>
         <?php endif; ?>
     </td>
-    <td class="col sku" data-th="<?= $block->escapeHtml(__('SKU')) ?>">
+    <td class="col sku" data-th="<?= $escaper->escapeHtml(__('SKU')) ?>">
         <?= /* @noEscape */ $block->prepareSku($block->getSku()) ?>
     </td>
-    <td class="col price" data-th="<?= $block->escapeHtml(__('Price')) ?>">
+    <td class="col price" data-th="<?= $escaper->escapeHtml(__('Price')) ?>">
         <?= $block->getItemPriceHtml() ?>
     </td>
-    <td class="col qty" data-th="<?= $block->escapeHtml(__('Qty')) ?>">
+    <td class="col qty" data-th="<?= $escaper->escapeHtml(__('Qty')) ?>">
         <ul class="items-qty">
         <?php if ($block->getItem()->getQtyOrdered() > 0): ?>
             <li class="item">
-                <span class="title"><?= $block->escapeHtml(__('Ordered')) ?></span>
+                <span class="title"><?= $escaper->escapeHtml(__('Ordered')) ?></span>
                 <span class="content">
-                    <?= $block->escapeHtml($localeFormatter->formatNumber((float) $block->getItem()->getQtyOrdered()))?>
+                    <?= $escaper->escapeHtml(
+                        $localeFormatter->formatNumber((float) $block->getItem()->getQtyOrdered())
+                    )?>
                 </span>
             </li>
         <?php endif; ?>
         <?php if ($block->getItem()->getQtyShipped() > 0): ?>
             <li class="item">
-                <span class="title"><?= $block->escapeHtml(__('Shipped')) ?></span>
+                <span class="title"><?= $escaper->escapeHtml(__('Shipped')) ?></span>
                 <span class="content">
-                    <?= $block->escapeHtml($localeFormatter->formatNumber((float) $block->getItem()->getQtyShipped()))?>
+                    <?= $escaper->escapeHtml(
+                        $localeFormatter->formatNumber((float) $block->getItem()->getQtyShipped())
+                    )?>
                 </span>
             </li>
         <?php endif; ?>
         <?php if ($block->getItem()->getQtyCanceled() > 0): ?>
             <li class="item">
-                <span class="title"><?= $block->escapeHtml(__('Canceled')) ?></span>
+                <span class="title"><?= $escaper->escapeHtml(__('Canceled')) ?></span>
                 <span class="content">
-                    <?= $block->escapeHtml(
+                    <?= $escaper->escapeHtml(
                         $localeFormatter->formatNumber((float) $block->getItem()->getQtyCanceled())
                     )?>
                 </span>
@@ -99,9 +104,9 @@ $authPhotoUrl = $productInfoViewModel->getAuthenticationPhotoUrl($authPhoto);
         <?php endif; ?>
         <?php if ($block->getItem()->getQtyRefunded() > 0): ?>
             <li class="item">
-                <span class="title"><?= $block->escapeHtml(__('Refunded')) ?></span>
+                <span class="title"><?= $escaper->escapeHtml(__('Refunded')) ?></span>
                 <span class="content">
-                    <?= $block->escapeHtml(
+                    <?= $escaper->escapeHtml(
                         $localeFormatter->formatNumber((float) $block->getItem()->getQtyRefunded())
                     )?>
                 </span>
@@ -109,7 +114,7 @@ $authPhotoUrl = $productInfoViewModel->getAuthenticationPhotoUrl($authPhoto);
         <?php endif; ?>
         </ul>
     </td>
-    <td class="col subtotal" data-th="<?= $block->escapeHtml(__('Subtotal')) ?>">
+    <td class="col subtotal" data-th="<?= $escaper->escapeHtml(__('Subtotal')) ?>">
         <?= $block->getItemRowTotalHtml() ?>
     </td>
 </tr>
