--- a/app/code/SK/ProductCOA/view/frontend/templates/auth-photo.phtml
+++ b/app/code/SK/ProductCOA/view/frontend/templates/auth-photo.phtml
@@ -116,7 +116,7 @@ $order = $productInfoViewModel->getOrder();
                                     style="display: none;">
                             <div class="modal-inner-content">
                                 <span class="modal-close" 
-                                        data-modal="auth-modal-<?= $index ?>">&times;</span>
+                                        data-modal="auth-modal-<?= $escaper->escapeHtml($index) ?>">&times;</span>
                                 <h2><?= $escaper->escapeHtml('Certificate of Authentication') ?></h2>
                                 <img src="<?= $escaper->escapeUrl($authPhotoUrl) ?>" alt="Authentication Photo">
                             </div>
